src2/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Local_Legacy_Id__c</fullName>
        <label>Local Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MachineType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine Type</label>
        <referenceTo>Machine_Type__c</referenceTo>
        <relationshipLabel>Price Book Entries</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price_Book_Entry_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Price Book Entry UUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPageUrl__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UpdateDate__c</fullName>
        <label>UpdateDate</label>
        <type>DateTime</type>
    </fields>
</CustomObject>